# ros2_ws

./: .gitignore  README.md  docker-compose.yml  explore_node_logs
.devcontainer/: Dockerfile  base.Dockerfile  colcon_defaults.yaml  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/debug_node/: Dockerfile
.devcontainer/explore_node/: Dockerfile
.devcontainer/gazebo_node/: Dockerfile  classic.Dockerfile  entrypoint.sh
.devcontainer/listener_node/: Dockerfile
.devcontainer/robot_node/: Dockerfile
.devcontainer/talker_node/: Dockerfile
.devcontainer/turtlebot_node/: Dockerfile
install/: setup.sh
install/debug_node/share/debug_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gazebo_node/share/gazebo_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/listener_node/share/listener_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: README.md
src/debug_node/: CMakeLists.txt  setup.cfg  setup.py
src/debug_node/debug_node/: debug_node.py
src/gazebo_node/: package.xml  setup.cfg  setup.py
src/gazebo_node/gazebo_node/: gazebo.py
src/gazebo_node/launch/: gazebo.launch.py  gz_with_bridge.launch.py
src/gazebo_node/models/turtlebot3_burger/: model.sdf
src/gazebo_node/models/turtlebot3_house/: model.sdf
src/gazebo_node/models/turtlebot3_waffle_pi/: model.config
src/gazebo_node/worlds/: empty_world.world  small_house.world  turtlebot3_house.world  turtlebot3_world.world
src/listener_node/: package.xml  setup.cfg  setup.py
src/listener_node/launch/: listener_launch.py
src/listener_node/listener_node/: listener.py
src/listener_node/resource/: listener_node
src/robot_nodex/: package.xml  setup.cfg  setup.py
src/robot_nodex/launch/: robot_state_publisher.launch.py  spawn_robot.launch.py  spawn_turtlebot3.launch.py
src/robot_nodex/params/: planner_params.yaml
src/robot_nodex/resource/: robot_node
src/robot_nodex/robot_node/: turtlebot.py  turtlebot_explore.py
src/talker_node/: package.xml  setup.cfg  setup.py
src/talker_node/launch/: talker_launch.py
src/talker_node/talker_node/: talker.py
src/turtlebot_node/: package.xml  setup.cfg  setup.py
src/turtlebot_node/launch/: spawn_turtlebot.launch.py  turtlebot_launch.py
src/turtlebot_node/turtlebot_node/: turtlebot.py  turtlebot_explore.py
(+25 files in other folders)
